// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should disable postcss-css-variables if options.cssVariables is false 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": undefined,
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should disable postcss-url if options.url is false 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should have a good base config 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.advancedVariables to postcss-advanced-variables  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      "foo",
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.browsers to postcss-preset-env  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": "foo",
          "remove": false,
        },
        "browsers": "foo",
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.cssVariables to postcss-css-variables 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.import to postcss-import  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
      "foo",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.mixins to postcss-mixins  1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "url": "rebase",
      },
    ],
    Array [
      "postcss-mixins",
      "foo",
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;

exports[`should pass options.url to postcss-url 1`] = `
Object {
  "plugins": Array [
    Array [
      "postcss-import",
    ],
    Array [
      "postcss-url",
      Object {
        "foo": "bar",
      },
    ],
    Array [
      "postcss-mixins",
      Object {
        "mixinsDir": "./src/styles/mixins",
      },
    ],
    Array [
      "postcss-advanced-variables",
      Object {
        "disable": "@mixin, @include, @content, @import",
      },
    ],
    Array [
      "postcss-preset-env",
      Object {
        "autoprefixer": Object {
          "overrideBrowserslist": Array [
            "extends browserslist-config-google",
          ],
          "remove": false,
        },
        "browsers": Array [
          "extends browserslist-config-google",
        ],
        "features": Object {
          "custom-media-queries": true,
          "custom-properties": false,
          "nesting-rules": true,
        },
        "insertAfter": Object {
          "nesting-rules": [Function],
        },
        "preserve": false,
        "stage": 3,
      },
    ],
    Array [
      "postcss-color-function",
    ],
    Array [
      "postcss-calc",
    ],
  ],
}
`;
